# gnome-documents

./: .gitlab-ci.yml  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  gnome-documents.doap  meson.build  meson_options.txt  meson_post_install.py
data/: Makefile.am  application.css  meson.build  org.gnome.Books.appdata.xml.in  org.gnome.Books.desktop.in  org.gnome.Documents.appdata.xml.in  org.gnome.Documents.data.gresource.xml  org.gnome.Documents.desktop.in
data/icons/: Makefile.am  meson.build
data/ui/: app-menu.ui  books-app-menu.ui  documents-app-menu.ui  help-overlay.ui  organize-collection-dialog.ui  preview-context-menu.ui  preview-menu.ui  selection-menu.ui  view-menu.ui
flatpak/: org.gnome.Books.json  org.gnome.Documents.json
getting-started/: Makefile.am  meson.build
help/: LINGUAS  Makefile.am  meson.build
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ko/: ko.po
help/lv/: lv.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/sv/: sv.po
help/uk/: uk.po
m4/: getting-started.m4
man/: Makefile.am  gnome-books.xml  gnome-documents.xml  meson.build
po/: LINGUAS  Makevars  POTFILES.in  af.po  ar.po  as.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  ln.po  lt.po  lv.po  mjw.po  mk.po  (+26 more)
src/: Makefile-lib.am  Makefile.am  application.js  changeMonitor.js  documents.js  edit.js  embed.js  epubview.js  errorBox.js  evinceview.js  fullscreenAction.js  lokview.js  main.js  mainToolbar.js  mainWindow.js  manager.js  meson.build  notifications.js  org.gnome.Books.src.gresource.xml  org.gnome.Documents.src.gresource.xml  overview.js  password.js  places.js  presentation.js  preview.js  properties.js  query.js  search.js  searchbar.js  selections.js  sharing.js  shellSearchProvider.js  trackerController.js  trackerUtils.js  utils.js  view.js  windowMode.js
src/lib/: gd-metadata.c  gd-nav-bar.c  gd-pdf-loader.c  gd-pdf-loader.h  gd-utils.c  gd-utils.h
