sources = [
  'legal.xml',
  'collections.page',
  'filter.page',
  'formats.page',
  'index.page',
  'info.page',
  'print.page',
  'prob-no-show.page',
  'prob-previews.page',
  'search.page',
  'viewgrid.page',
  'view.page',
  'view-add.page'
]

media = [
  'media/go-down.png',
  'media/icon_gnome-documents.png'
]

linguas = [
  'as',
  'ca',
  'cs',
  'de',
  'el',
  'fi',
  'fr',
  'es',
  'gl',
  'gu',
  'hi',
  'hu',
  'id',
  'it',
  'ja',
  'kn',
  'ko',
  'lv',
  'mr',
  'nl',
  'pa',
  'pl',
  'pt_BR',
  'ru',
  'sl',
  'sr',
  'sr@latin',
  'sv',
  'te',
  'vi',
  'ta',
  'zh_CN'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true,
  languages: linguas
)
