sources = [
  'legal.xml',
  'collections.page',
  'filter.page',
  'formats.page',
  'index.page',
  'info.page',
  'print.page',
  'prob-no-show.page',
  'prob-previews.page',
  'search.page',
  'viewgrid.page',
  'view.page',
  'view-add.page'
]

media = [
  'media/go-down.png',
  'media/icon_gnome-documents.png'
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
  symlink_media: true
)
